--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -31,6 +30,7 @@
     "expo-location": "~12.1.2",
     "expo-notifications": "~0.12.3",
     "expo-permissions": "~12.1.1",
+    "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
     "expo-web-browser": "~9.2.0",
@@ -42,7 +42,7 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "~0.63.4",
     "react-native-awesome-gallery": "^0.1.7",
     "react-native-bouncy-checkbox": "^2.1.2",
     "react-native-collapsible-header-views": "^1.1.2",
@@ -56,9 +56,7 @@
     "react-native-modal": "^12.0.2",
     "react-native-modalize": "^2.0.8",
     "react-native-pager-view": "5.0.12",
-    "react-native-photo-view": "^1.5.2",
     "react-native-progress": "^5.0.0",
-    "react-native-range-slider": "^0.1.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
@@ -68,6 +66,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^2.16.0",
+    "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
     "react-native-webview": "11.6.2",
     "react-navigation-collapsible": "^5.10.2",
@@ -78,5 +77,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0"
   },
-  "private": true
+  "private": true,
+  "name": "maralkish",
+  "version": "1.0.0"
 }
