--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "formik": "^2.2.9",
     "jalali-moment": "^3.3.10",
     "jwt-decode": "^3.1.2",
-    "lottie-react-native": "4.0.2",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^4.0.3",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
